<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="EndlessHomescreenLoop"
        android:title="@string/settings_endless_desktop_loop"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="LauncherOrientation"
        android:title="@string/settings_launcher_orientation"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="WallpaperScrolling"
        android:title="@string/settings_wallpaper_scrolling"
        android:defaultValue="true"/>
    
    <CheckBoxPreference
        android:key="ScrollableWidgets"
        android:title="@string/settings_scrollable_widgets"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="ExtendedHotseats"
        android:title="@string/settings_extended_hotseats"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="DarkBackground"
        android:title="@string/settings_dark_background"
        android:defaultValue="false"
        android:dependency="TransparentBackground"/>
    
    <CheckBoxPreference
        android:key="TransparentBackground"
        android:title="@string/settings_transparent_background"
        android:defaultValue="false"
        android:disableDependentsState="true"/>
</PreferenceScreen>
